# EnigmaDB

./: .clang-format  CMakeLists.txt  Fun  README.md  TODO
lib/: avl.cpp  avl.hpp  entry.cpp  entry.hpp  memtable.cpp  memtable.hpp  timestamp_generator.cpp  wal.cpp  wal.hpp
lib/abstract/: avl.hpp  timestamp_generator.cpp  timestamp_generator.hpp
lib/compression/: compressor.hpp  lz_4_compressor.cpp  lz_4_compressor.hpp  noop_compressor.hpp
lib/datatypes/: builtin_descriptors.hpp  comparator.hpp  default_descriptor.hpp  field.cpp  field.hpp  field_type.hpp  field_value.hpp  serializer.hpp  type_descriptor.cpp  type_descriptor.hpp  type_registry.cpp  type_registry.hpp
lib/datatypes/serializers/: core_serializers.hpp
lib/datatypes/types/: uuid.hpp
lib/docs/: doc.md  tracker.md
lib/entry/: core_constants.hpp  entry.cpp  entry.hpp  key.cpp  key.hpp
lib/io/: engine.hpp  posix_engine.cpp  posix_engine.hpp  types.hpp
lib/io/linux/: linux_io_engine.cpp  linux_io_engine.hpp  uring_io_engine.cpp  uring_io_engine.hpp
lib/memtable/: memtable.cpp  memtable.hpp  memtable_manager.cpp  memtable_manager.hpp
lib/sstable/: README.md  block_encoder.cpp  block_encoder.hpp  compressor.cpp  compressor.hpp  filter_policy.cpp  filter_policy.hpp  key_encoder.cpp  key_encoder.hpp
lib/utils/: byte_parser.cpp  byte_parser.hpp  byte_utils.cpp  byte_utils.hpp  constants.hpp  crypto_utils.cpp  crypto_utils.hpp  logger.hpp
lib/utils/vint/: vint.hpp
lib/wal/: wal.cpp  wal.hpp  wal_codec.hpp  wal_manager.cpp  wal_manager.hpp  wal_writer.cpp  wal_writer.hpp
tests/: test_abs.hpp  test_main.cpp  test_utils.hpp  timestamp_generator_test.cpp  timestamp_generator_test.hpp
tests/compression/: test_lz4_compression.cpp  test_lz4_compression.h  test_noop_compression.cpp  test_noop_compression.h
tests/datatypes/: test_field_serialization.cpp  test_field_serialization.hpp
tests/datatypes/types/: test_uuid_type.cpp  test_uuid_type.hpp
tests/memtable/: test_memtable_put_get.cpp  test_memtable_put_get.hpp
tests/utils/: byte_parser.cpp  byte_parser.hpp  byte_utils.cpp  byte_utils.hpp  test_byte_parser.cpp  test_byte_utils_entry.cpp
tests/utils/vint/: test_varint_encode.cpp
tests/wal/: test_wal_codec_encode_decode.cpp  test_wal_manager.cpp  test_writer_behavior.cpp  test_writer_behavior.hpp  wal_codec_test.cpp  wal_codec_test.hpp  wal_manager_test.cpp  wal_manager_test.hpp
